# weasel

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  ROAD_NOTE.md  build.sh  file_count.py  llvm_13_mac.md  package.json  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml
benchmark/: bubble_sort.we
benchmark/bubble_sort/: main.c  main.cs  main.java  main.js  main.php  main.py  main.we
benchmark/openmp/: main.c
benchmark/parallel/: main.we
benchmark/pthread/: main.c  main.we
cmake/: weasel-config.cmake
config/: build.sh  install-fmt.sh  install-glog.sh  install-spirv.sh  llvm.sh  setup.sh  spirv-clspv.sh  spirv-cross.sh  spirv.sh  test-cross.sh  test-weasel.sh
docs/: ERRORS.md  EXPRESSIONS.md  LAMBDA.md  PACKAGE.md  ROADMAP.md  ROAD_NOTE.md
examples/nn/: main.we
examples/print/: main.we
examples/src/: Main.we
examples/src/Hello/: Hello.we
include/weasel-c/: BuildSystem.h  debug.h
include/weasel-glsl/AST/: AST.h
include/weasel-glsl/IR/: Constant.h
include/weasel/AST/: AST.h  ASTBase.h  ASTExpr.h  ASTExpression.h  ASTFun.h  ASTFunction.h  ASTLiteral.h  ASTManager.h  ASTOperator.h  ASTStatement.h  ASTStruct.h  Builder.h  Codegen.h  LInkage.h
include/weasel/Analysis/: AnalysisError.h  AnalysisEvaluate.h  AnalysisSemantic.h
include/weasel/Basic/: Cast.h  Codegen.h  Defer.h  Enum.h  Error.h  FileManager.h  Location.h  MapFile.h  String.h
include/weasel/Codegen/: Codegen.h
include/weasel/Config/: Config.h
include/weasel/Driver/: Driver.h
include/weasel/IR/: Builder.h  Codegen.h  Context.h  Driver.h  Module.h
include/weasel/Lexer/: Lexer.h  Token.h
include/weasel/Metadata/: Metadata.h
include/weasel/Package/: FileAST.h  Module.h  Package.h  PackageManager.h
include/weasel/Parser/: Parser.h  ParserPool.h
include/weasel/Passes/: Passes.h  PassesGLSL.h
include/weasel/Printer/: Printer.h
include/weasel/Source/: SourceBuffer.h  SourceManager.h
include/weasel/Symbol/: Symbol.h
include/weasel/Table/: ContextTable.h  ParserTable.h  Table.h
include/weasel/Type/: Type.h
include/weasel/Util/: Util.h
include/weasel/ast/: ASTBase.h  ASTExpr.h  ASTFun.h  ASTLiteral.h  ast.h
include/weasel/basic/: filemanager.h
include/weasel/codegen/: codegen.h
include/weasel/ir/: context.h
include/weasel/lex/: lexer.h
include/weasel/parse/: parser.h
include/weasel/symbol/: symbol.h
issues/: memory.md
lib/: CMakeLists.txt
lib/AST/: AST.cpp  ASTCodegen.cpp  ASTDebug.cpp  ASTError.cpp  ASTEvaluate.cpp  ASTPrinter.cpp  ASTSemantic.cpp  Builder.cpp
lib/Analysis/: AnalysisSemantic.cpp
lib/Basic/: Cast.cpp  FileManager.cpp  Number.cpp
lib/Codegen/: Codegen.cpp
lib/Driver/: Driver.cpp
lib/IR/: Codegen.cpp  CodegenLiteral.cpp  CodegenMeta.cpp  CodegenOperator.cpp  CodegenStatement.cpp  CodegenType.cpp  Context.cpp  ContextHelper.cpp  ContextLiteral.cpp  ContextOperator.cpp  ContextStatement.cpp  Driver.cpp
lib/Lexer/: Lexer.cpp  LexerKeyword.cpp  LexerLiteral.cpp  LexerPunctuation.cpp  LexerType.cpp  Token.cpp
lib/Metadata/: Metadata.cpp
lib/Package/: FileAST.cpp  Package.cpp  PackageManager.cpp
lib/Parser/: Parser.cpp  ParserExpr.cpp  ParserExpression.cpp  ParserFunction.cpp  ParserHelper.cpp  ParserStatement.cpp
lib/Passes/: Passes.cpp  PassessGLSL.cpp
lib/Printer/: Printer.cpp
lib/Source/: SourceBuffer.cpp  SourceManager.cpp
lib/Symbol/: Symbol.cpp
lib/Type/: Type.cpp  TypeCodegen.cpp  TypeError.cpp  TypeSemantic.cpp
lib/ast/: ast.cpp
lib/codegen/: codegen.cpp
lib/ir/: ContextHelper.cpp  context.cpp
lib/lex/: lexer.cpp  lexer_keyword.cpp  lexer_literal.cpp  lexer_punctuation.cpp  lexer_type.cpp
lib/parse/: parser.cpp  parser_expr.cpp  parser_function.cpp  parser_helper.cpp
lib/symbol/: symbol.cpp
libparallel/: CMakeLists.txt  README.md  parallel.md
libparallel/include/: helper.h  parallel.h
libparallel/src/: command.cpp  descriptor.cpp  device.cpp  instance.cpp  layout.cpp  memory.cpp  pipeline.cpp  queue.cpp  shader.cpp
libstd/: parallel.we  std.md
libstd/builtin/: io.we  malloc.we  thread.we
md/: lexer_guide.md  llvm_13_mac.md
proposal/mangled/: mangled.md
proposal/references/: TypeSafety.md  code_strategy.md  expression.txt  reference.md
proposal/syntax/: THREAD.md  declaration.we  for.we  if.we  impl.we  lambda.we  main.we  memory.we  package.we  parallel.we  struct.we  v2.we  v3.we  v4.we
runtime-rt/print/: main.we
test/: CMakeLists.txt  main.we
test/cross-test/: CMakeLists.txt  main.cpp  square.spv
test/glsl-test/: CMakeLists.txt  main.cpp
test/metal-test/: CMakeLists.txt  main.cpp
test/parallel-test/: CMakeLists.txt  main.cpp
test/spirv-test/: CMakeLists.txt  main.cpp
test/vulkan-test/: CMakeLists.txt  comp.spv  main.cpp  square.comp  square.spv
tools/: CMakeLists.txt
tools/cage/: CMakeLists.txt  cage.cpp  main.cpp
tools/cross/: CMakeLists.txt  cross.cpp
tools/driver/: driver.cpp
tools/weaselc/: CMakeLists.txt  debug.cpp  main.cpp
tools/weaseld/: CMakeLists.txt  main.cpp
