add_library(WeaselLib STATIC
    AST/AST.cpp
    Basic/FileManager.cpp
    Basic/Number.cpp
    Codegen/Codegen.cpp
    IR/Context.cpp
    IR/ContextLiteral.cpp
    IR/ContextHelper.cpp
    Lexer/Lexer.cpp
    Lexer/LexerType.cpp
    Lexer/LexerPunctuation.cpp
    Lexer/LexerKeyword.cpp
    Lexer/LexerLiteral.cpp
    Lexer/Token.cpp
    Metadata/Metadata.cpp
    Passes/Passes.cpp
    Parser/Parser.cpp
    Parser/ParserFunction.cpp
    Parser/ParserExpr.cpp
    Parser/ParserHelper.cpp
    Type/Type.cpp
    Symbol/Symbol.cpp
)
